--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -122,7 +122,7 @@
 
 - 퍼셉트론은 얼마나 빨리 학습하는가?
 
-- 최대 오류 횟수는 (R/γ)^2 이하 ((R/γ)제곱 이하)
+- 최대 오류 횟수는 (R/γ)^2 이하 ((R/γ)제곱 이하) (이후 증명)
 
     - R : 원점(0,0)으로부터 각 데이터 점까지의 거리 중 **최댓값**
  
@@ -212,10 +212,61 @@
  
  <br/>
 
- ### p.69부터
- 
+- **최대 오류 횟수는 (R/γ)^2 이하 증명** 
 
-   
+    - The Squeeze (압축 논법)로 증명 : 지금까지 얻은 상·하한식을 모아 최종 결론(최대 오류 횟수)을 구하겠다
+ 
+    - lower bound 증명 : **wᵢ·w∗ ≥ iα**
+ 
+        - 학습이 i번 업데이트되면, 현재 가중치 wᵢ는 최적 해 w*와 최소한 iα만큼 가까워진다
+
+    - upper bound 증명 : **‖wᵢ‖² ≤ iβ**
+ 
+        - wᵢ의 크기 제곱은 iβ 이하이다
+     
+    - Cauchy-Schwarz 부등식 사용 : (wᵢ·w∗)² ≤ ‖wᵢ‖² · ‖w∗‖²
+ 
+        - 이후 대입해주면 (iα)² ≤ iβ · ‖w*‖²
+     
+        - = i²α² ≤ iβ · ‖w*‖²
+     
+            - 제곱 전개
+
+        - i ≤ (β · ‖w*‖²) / α²
+     
+            - i 약분 (i는 횟수이므로 0이 아님), α²으로 나눔
+         
+        - 여기서 최적 해 w*의 크기를 1로 정규화
+     
+            - 방향만 중요하고 크기는 임의로 조정 가능
+         
+        - 즉, **i ≤ β / α²** : 업데이트 횟수 **i는 β / α² 이하**이다
+     
+            - 따라서 최대 오류 횟수는 **최대 오류 횟수는 β / α²** 이다
+         
+                - 데이터가 잘 구분될수록 **α 큼** → **오류가 줄어든다**
+
+                - 데이터가 크고 복잡할수록 **β 큼** → **오류가 늘어난다** 
+     
+<br/>
+
+- **최종정리**
+
+    - **lower bound** : w와 w*의 내적은 **실수가 발생**할 때마다 **margin 만큼 선형적**으로 증가한다
+ 
+        - 이는 w가 점점 올바른 해 w*와 정렬되어 감  
+
+    - **upper bound** : 상한: w의 제곱 노름은 βi 이하이다
+    
+        - β는 데이터 샘플들 중 가장 큰 입력 벡터의 길이의 제곱값
+     
+        - w가 **무한정 커지지 않고 일정 속도**로만 커짐
+             
+    -  **업데이트 횟수 i는 β / α² 이하**
+ 
+        - 데이터가 잘 구분될수록 **α 큼** → **오류가 줄어든다**
+
+        - 데이터가 크고 복잡할수록 **β 큼** → **오류가 늘어난다**
 
 
 
