--- a/Artificial Neural Network/Artificial Neural Network study/중간정리본.md
+++ b/Artificial Neural Network/Artificial Neural Network study/중간정리본.md
@@ -79,4 +79,18 @@
 
 - **Convergence Bounds**
 
-    - 퍼셉트론은 무한히 학습하지 않고 **수렴**한다는 것을 보여줌 
+    - **lower bound** : w와 w*의 내적은 **실수가 발생**할 때마다 **margin 만큼 선형적**으로 증가한다
+ 
+        - 이는 w가 점점 올바른 해 w*와 정렬되어 감  
+
+    - **upper bound** : 상한: w의 제곱 노름은 βi 이하이다
+    
+        - β는 데이터 샘플들 중 가장 큰 입력 벡터의 길이의 제곱값
+     
+        - w가 **무한정 커지지 않고 일정 속도**로만 커짐
+             
+    -  **업데이트 횟수 i는 β / α² 이하**
+ 
+        - 데이터가 잘 구분될수록 **α 큼** → **오류가 줄어든다**
+
+        - 데이터가 크고 복잡할수록 **β 큼** → **오류가 늘어난다**
