--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -268,6 +268,15 @@
 
         - 데이터가 크고 복잡할수록 **β 큼** → **오류가 늘어난다**
 
+<br/>
+
+- **퍼셉트론/머신러닝 구현 시 설전 팁**
+
+    - 데이터를 정규화/스케일링해야 학습이 안정적이고 빠르다.
+
+    - feature 크기를 맞춰줘야 특정 값이 과도하게 영향 주지 않는다.
+
+    - epoch 제한을 두고, 끝까지 안 되면 데이터 자체가 분리 불가능하다고 판단한다
 
 
 
