--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -278,17 +278,57 @@
 
     - epoch 제한을 두고, 끝까지 안 되면 데이터 자체가 분리 불가능하다고 판단한다
 
+<br/>
 
+- **퍼셉트론 수렴 정리**
 
+    - 데이터가 **선형적으로 분리 가능**하다면, 퍼셉트론은 **반드시 수렴**한다
+ 
+        - 두 클래스가 직선(또는 초평면)으로 나눌 수 있다면, 퍼셉트론은 무한히 틀리지 않고 언젠가 정답에 도달
+     
+        - 만약 선형적이지 않다면 **수렴 보장은 없다**
+     
+            - 실전 팁으로 약 1000 epoch 동안 수렴하지 않으면, 선형 분리가 불가능할 가능성이 높음
+         
+            - 이 경우 다른 알고리즘(ex: 다층 신경망)을 사용해야함 
 
+<br/>
 
+### 퍼셉트론의 한계점 
 
+- **직선(선형) 경계**만 분리 가능
 
+    - **XOR 문제를 풀 수 없다**
+ 
+    - 곡선이나 복잡한 경계가 있는 데이터는 분류할 수 없다
 
+<br/>
 
+- **이진 분류**만 가능하다
 
+    - 확장 방법이 있긴 하지만 성능이 제한적이다  
 
+<br/>
 
+- **확률**적인 출력을 **제공하지 않는다**
+
+    - 퍼셉트론은 예/아니오 만 말하고 몇 % 확신하는지는 알려주지 못한다
+ 
+    - 신뢰도 측정이 없다
+
+<br/>
+
+- **이상치(outlier)에 민감**하다
+
+    - 하나의 잘못된 점이 경계를 크게 바꿀 수 있다 
+
+<br/>
+
+- **분리 불가능**한 데이터에 대해서는 **보장이 없다**
+
+    - 퍼셉트론이 무한히 업데이트만 반복
+ 
+    - 최선의 근사 해도 제공하지 않는다
 
 
 
