--- a/Artificial Neural Network/Artificial Neural Network study/중간정리본.md
+++ b/Artificial Neural Network/Artificial Neural Network study/중간정리본.md
@@ -94,3 +94,15 @@
         - 데이터가 잘 구분될수록 **α 큼** → **오류가 줄어든다**
 
         - 데이터가 크고 복잡할수록 **β 큼** → **오류가 늘어난다**
+
+<br/>
+
+- 퍼셉트론 장단점
+
+    - 장점
+ 
+        - 단순하고 구현이 쉽다
+
+        - 선형적으로 분리 가능한 데이터에서는 반드시 수렴한다
+
+        - 온라인 학습(데이터가 순차적으로 들어와도 갱신 가능)에 적합
