--- a/Artificial Neural Network/Artificial Neural Network study/중간정리본.md
+++ b/Artificial Neural Network/Artificial Neural Network study/중간정리본.md
@@ -97,7 +97,7 @@
 
 <br/>
 
-- 퍼셉트론 장단점
+- **퍼셉트론 장단점**
 
     - 장점
  
@@ -106,3 +106,39 @@
         - 선형적으로 분리 가능한 데이터에서는 반드시 수렴한다
 
         - 온라인 학습(데이터가 순차적으로 들어와도 갱신 가능)에 적합
+    
+
+
+   - 퍼셉트론의 한계점 
+
+       - **직선(선형) 경계**만 분리 가능
+
+           - **XOR 문제를 풀 수 없다**
+ 
+           - 곡선이나 복잡한 경계가 있는 데이터는 분류할 수 없다
+
+
+       - **이진 분류**만 가능하다
+
+           - 확장 방법이 있긴 하지만 성능이 제한적이다  
+
+
+
+       - **확률**적인 출력을 **제공하지 않는다**
+
+           - 퍼셉트론은 예/아니오 만 말하고 몇 % 확신하는지는 알려주지 못한다
+ 
+           - 신뢰도 측정이 없다
+
+
+
+       - **이상치(outlier)에 민감**하다
+
+           - 하나의 잘못된 점이 경계를 크게 바꿀 수 있다 
+
+
+       - **분리 불가능**한 데이터에 대해서는 **보장이 없다**
+
+           - 퍼셉트론이 무한히 업데이트만 반복
+ 
+           - 최선의 근사 해도 제공하지 않는다
