--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -330,9 +330,11 @@
  
     - 최선의 근사 해도 제공하지 않는다
 
+<br/>
 
+### 퍼셉트론 & XOR 문제 
 
-
+- ![System Resources](../../images/Artificial%20Neural%20Network%20images/XOR함수.png)
 
 
 
