--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -334,7 +334,19 @@
 
 ### 퍼셉트론 & XOR 문제 
 
-- ![System Resources](../../images/Artificial%20Neural%20Network%20images/XOR함수.png)
+- 아래 이미지는 퍼셉트론의 입력과 출력을 함수로 나타낸 것이다
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/XOR함수.png)
+ 
+    - 이것을 선형적으로 분리하려고 노력해도 불가능
+      
+    - Minsky와 Papert가 1969년에 단일 퍼셉트론이 XOR을 풀 수 없음을 수학적으로 증명
+ 
+        - 해결책 : **다층 신경망이 필요**하다
+     
+        - XOR 문제는 단일 퍼셉트론이 아니라, **여러 층(은닉층)을 가진 신경망으로 풀 수 있다**
+     
+        - 이로 인해 **다층 퍼셉트론(MLP)** 과 **현대 딥러닝**이 **발전**
 
 
 
