--- a/Artificial Neural Network/Artificial Neural Network study/02-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-1장.md
@@ -131,6 +131,8 @@
 
 ### 생물학적 뉴런 ->수학적 퍼셉트론 모델 변환 과정 
 
+- 퍼셉트론 : 입력 벡터와 가중치의 선형 결합에 기반하여 **두 클래스를 분류**하는 **가장 기본적인 인공 신경망 모델**
+
 - 생물학적 뉴런을 바탕으로한 변환 과정 
 
     - 수상돌기 (Dendrite)가 신호를 받는다 → 입력값으로 표현 (x₁, x₂, …, xₙ)
