--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -348,10 +348,38 @@
      
         - 이로 인해 **다층 퍼셉트론(MLP)** 과 **현대 딥러닝**이 **발전**
 
+<br/>
 
+### 다층 신경망(Neural Networks)
 
+![System Resources](../../images/Artificial%20Neural%20Network%20images/퍼셉트론구조표현.png)
+![System Resources](../../images/Artificial%20Neural%20Network%20images/다층신경망.png)
 
+- 위와 같이 한계점으로 인해 단순한 퍼셉트론에서 복잡한 **다층 신경망** 발전
 
+    - 핵심 기능
+ 
+    - **Hidden layers (은닉층)** – 중간 표현을 담당
+ 
+        - 입력과 출력 사이에 층을 더 두어, 단일 퍼셉트론이 못하는 복잡한 패턴을 학습할 수 있게 한다
+     
+        - **특징들의 조합**을 학습할 수 있다
+     
+        - **충분한 뉴런**이 있다면 **어떤 연속 함수라도 근사**할 수 있다
+     
+        - XOR 문제를 포함해 **훨씬 더 많은 문제를 해결**한다
+     
+    - **Nonlinear activation (비선형 활성화)** : 단순 계단 함수만 쓰지 않는다
+ 
+        - ReLU, sigmoid 같은 비선형 함수를 사용
+     
+    - **Backpropagation (역전파)** : 여러 층을 학습하는 방법
+ 
+        - 오차를 뒤로 전파해 가중치를 조정하는 알고리즘 
+
+<br/>
+
+- **다층 신경망(Neural Networks) XOR 문제 풀이 과정**
 
 
 
