--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -381,7 +381,7 @@
 
 - **다층 신경망(Neural Networks) XOR 문제 풀이 과정**
 
-
+![System Resources](../../images/Artificial%20Neural%20Network%20images/다층신경망xOR그림.png)
 
 
 
