--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -383,7 +383,15 @@
 
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/다층신경망xOR그림.png)
 
+- 위 그림처럼 은닉층 2개를 사용한다 
 
+    - h1 = NAND(x₁, x₂) : AND의 부정
+ 
+    - h₂ = OR(x₁, x₂) : 하나라도 1 -> 1
+ 
+    - 이 두개를 AND 엮어주면 다음과 같이 나온다
+ 
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/다층신경망XOR표.png)
 
 
 
