--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -392,6 +392,8 @@
     - 이 두개를 AND 엮어주면 다음과 같이 나온다
  
         - ![System Resources](../../images/Artificial%20Neural%20Network%20images/다층신경망XOR표.png)
+     
+        - NAND와 OR 둘 다 1 인 값을 묶어주면 XOR과 동일
 
 
 
