--- a/Artificial Neural Network/Artificial Neural Network study/중간정리본.md
+++ b/Artificial Neural Network/Artificial Neural Network study/중간정리본.md
@@ -142,3 +142,21 @@
            - 퍼셉트론이 무한히 업데이트만 반복
  
            - 최선의 근사 해도 제공하지 않는다
+
+<br>
+
+- **다층신경망** 
+
+    - 퍼셉트론의 한계 해결
+ 
+    - **Hidden layers (은닉층)**
+ 
+        - 충분한 뉴런이 있다면 어떤 연속 함수라도 근사
+     
+    - **Nonlinear activation (비선형 활성화)**
+ 
+        - 단순 계단 함수만 쓰지 않는다
+     
+    - **Backpropagation (역전파)**
+ 
+        - 오차를 뒤로 전파해 가중치를 조정 
