--- a/Artificial Neural Network/Artificial Neural Network study/02-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-1장.md
@@ -313,6 +313,10 @@
         - 네 번째 특징에 대해 미분하면, 변화율은 w4이다 (시그마의 나머지 값은 상수 취)
      
         - 즉, 𝑤4값이 곧 그 특징이 결과에 미치는 영향의 크기와 방향
+     
+        - 예를 들면 x4 = 1 이고 w4 = 5 라면 곱은 5지만, 만약 x4 = 2로 변했다면, 곱은 10이 됨
+     
+            - 가중치만큼 특징이 민감하게 변한다는 걸 설명 
       
  <br/>
 
