--- a/Artificial Neural Network/Artificial Neural Network study/02-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-1장.md
@@ -369,6 +369,12 @@
     - **순 입력(net input)** : 입력값 × 가중치들을 모두 더한 값 (누적 )
  
         - **netⱼ = Σᵢ (wᵢⱼ · oᵢ)** : 뉴런 j가 받은 신호 =  여러 입력 뉴런 i에서 나온 출력 oi에, 가중치 wij를 곱해서 모두 더한 값
+     
+        - 즉, 이전 출력값이 1이면 oᵢ = 1, 0이면 oᵢ = 0
+     
+            -  출력 y가 0이라면, 그 뉴런은 다음 뉴런에 **“아무 신호도 보내지 않는다”** 는 의미
+         
+        - 이것은 퍼셉트론이 **단일 계산**으로 여러차례 계산이 되어가는 **과정과 조건*을 보여줌
  
     - **Output** : 임계값 이상이면 출력은 1, 작으면 0
  
