--- a/Natural Language Processing/Natural Language Processing study/03-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/03-1장.md
@@ -60,13 +60,37 @@ print(bag_of_words.most_common(4))
      
         - **해결책** : **정규화**를 하여 **비율**로 표현
 
+<br/>
 
+- 위 예시 문장에서 'harry'의 출현 빈도를 구해보자
 
+```ruby
+# 'harry' 단어가 등장한 횟수 가져오기
+times_harry_appears = bag_of_words['harry']
 
+# 전체 토큰 수 계산
+num_unique_words = len(tokens)
 
+# TF 계산: 단어 출현 횟수 / 전체 토큰 
+tf = times_harry_appears / num_unique_words
 
+# 소수점 4자리까지 반올림
+print(round(tf, 4))
+# 출력 예시: 0.1818
+```
 
+- 이와 같은 식으로 구한 특정 단어의 출현 빈도를 **TF(Term Frequency)** 라고 하며 전통적인 NLP에서의 주요 특징 중 하나로 널리 활용되고 있음 
 
+- TF 활용 예시 코드
+
+```ruby
+TF(“dog,” document_A) = 3/30 = .1
+TF(“dog,” document_B) = 100/580000 = .00017
+```
+
+<br/>
+
+## 실제 문서를 활용한 TF 
 
 
 
