--- a/Natural Language Processing/Natural Language Processing study/03-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/03-1장.md
@@ -92,9 +92,40 @@ TF(“dog,” document_B) = 100/580000 = .00017
 
 ## 실제 문서를 활용한 TF 
 
+- 아래 문장은 nlpia 라이브러리에서 테스트용으로 제공하는 샘플 문서 데이터이다
+
+    - from nlpia.data.loaders import kite_text 로 불러올 수 있다 
+
+![System Resources](../../images/Natural%20Language%20Processing%20images/kite문장예시.png)
+
+<br/>
+
+```ruby
+from collections import Counter  
+from nltk.tokenize import TreebankWordTokenizer  
+
+# 토크나이저 객체 생성
+tokenizer = TreebankWordTokenizer()
+
+# kite_text 불러오기 (교재/예시에서 제공하는 텍스트: "A kite is traditionally ..." 로 시작하는 문단)
+from nlpia.data.loaders import kite_text  
+
+# 텍스트를 소문자로 변환 후 토큰화
+tokens = tokenizer.tokenize(kite_text.lower())
+
+# 단어별 출현 횟수 계산
+token_counts = Counter(tokens)
+
+# 단어별 등장 빈도 출력
+print(token_counts)
+# 출력 예시:
+# Counter({'the': 26, 'a': 20, 'kite': 16, ',': 15, ...})
+
+# 해당 결과를 보면  ‘a’, ‘the’ 등의 관사가 최상위에 위치해 있어서 불용어 제거를 수행하고자 함
+# 아래 코드부터 불용어를 제거하는 코드이다
 
 
-
+```
 
 
 
