--- a/Natural Language Processing/Natural Language Processing study/03-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/03-1장.md
@@ -121,10 +121,59 @@ print(token_counts)
 # 출력 예시:
 # Counter({'the': 26, 'a': 20, 'kite': 16, ',': 15, ...})
 
+
+
+
 # 해당 결과를 보면  ‘a’, ‘the’ 등의 관사가 최상위에 위치해 있어서 불용어 제거를 수행하고자 함
 # 아래 코드부터 불용어를 제거하는 코드이다
 
 
+
+
+import nltk  
+
+# 불용어(stopwords) 데이터를 다운로드 (영어 기준)
+nltk.download('stopwords', quiet=True)  
+
+# 영어 불용어 목록 불러오기
+stopwords = nltk.corpus.stopwords.words('english')  
+
+# 기존 tokens 리스트에서 불용어에 해당하지 않는 단어만 남김
+tokens = [x for x in tokens if x not in stopwords]  
+
+# 단어별 출현 횟수 계산
+kite_counts = Counter(tokens)  
+
+# 결과 출력 (예: 'kite'가 16번, 'wing'이 5번 등장 등)
+print(kite_counts)
+# Counter({'kite': 16, 'traditionally': 1, 'tethered': 2, 'heavier-than-air': 1,
+#          'craft': 2, 'wing': 5, 'surfaces': 1, 'react': 1, 'air': 2, ..., 'made': 1})
+
+
+
+# 위 코드를 보면 불용어가 제가된 것을 볼 수 있다
+# 아래 코드는 출현 빈도(TF) 구현 코드이다
+
+
+
+# 문서 벡터를 저장할 빈 리스트 생성
+document_vector = []  
+
+# 문서의 전체 단어 수(토큰 수)
+doc_length = len(tokens)  
+
+# 가장 많이 등장한 단어 순으로 순회하면서 TF 계산
+# .most_common() : collections.Counter 클래스가 제공하는 메서드
+# .most_common()은 단어(토큰)과 그 빈도를 많이 등장한 순서대로 정렬된 (key, value) 튜플 형태로 반환함
+for key, value in kite_counts.most_common():  
+    # TF = (단어 등장 횟수 / 전체 단어 수)
+    document_vector.append(value / doc_length)  
+
+# 최종적으로 TF 벡터 출력
+print(document_vector)
+# 예시 출력:
+# [0.07207, 0.06757, 0.03603, ..., 0.00450]
+# 결과를 보면 빈도가 높은 단어부터 TF 값이 저장됨
 ```
 
 
