--- a/Artificial Neural Network/Artificial Neural Network study/02-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-1장.md
@@ -497,8 +497,12 @@
  
       ![System Resources](../../images/Artificial%20Neural%20Network%20images/퍼셉트론업데이트.png)
  
-        -  위 방식을 사용하면, 예측이 틀리면 **정답 방향으로** 가중치를 조금 움직
-
+        -  위 방식을 사용하면, 예측이 틀리면 **정답 방향으로** 가중치를 조금 움직임
+     
+        -  편향에서 yixi가 아니라 yi 만큼 움직이는 이유는 **입력 크기 xi와 무관하기 때문**
+     
+            - 출력의 방향(즉, 정답 라벨 yi) 에 따라 일정한 크기만 조정하면  된다
+	​
 <br/>
 
 - 또한, 위 업데이트 후의 예측값이, 업데이트 전의 예측값보다 **항상 크거나 같다**
