--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -154,6 +154,10 @@
  
         - 즉, w(t+1) = w(t) + yixi
      
+        - t: 업데이트 횟수(시간 step)
+        
+        - i: 현재 틀린 샘플의 인덱스(데이터 번호) 
+     
     - 여기서 양 변에 w*를 내적해보자 
  
         -  w(t+1)​⋅w∗ = (wt​ + yi​xi​)​⋅w∗ = w(t)​⋅w + yi(xi​⋅w∗)
