--- a/Artificial Neural Network/Artificial Neural Network study/중간정리본.md
+++ b/Artificial Neural Network/Artificial Neural Network study/중간정리본.md
@@ -55,6 +55,24 @@
 
 <br/>
 
+- **퍼셉트론 측면**
+    
+    - **Net input (순입력)** : **가중치가 적용**된 입력값
+
+    - **Activations (활성값)** : 활성화 함수(activation function)를 Net input (순입력)에 적용한 값
+
+    - **Label output (라벨 출력)** : 마지막 층의 활성값에 **임계값(threshold)** 을 적용한 것
+ 
+        - 퍼셉트론에서는 **활성화 함수**가 **임계값 함수**와 같음
+
+<br/>
+
+- **선형회귀 측면** : activation = net input = output (활성값 = 순입력 = 출력)
+
+    - 선형 회귀는 **별도의 활성화 함수가 없이**, 단순히 입력합이 그대로 결과 
+
+<br/>
+
 - **퍼셉트론의 핵심**
 
     - 틀린 점을 반대편으로 밀어서 **올바른 쪽**에 위치시키기 
