--- a/Artificial Neural Network/Artificial Neural Network study/02-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-1장.md
@@ -249,6 +249,8 @@
             - 따라서 전체 예측 결과를 더 긍정적(+1 쪽) 또는 부정적(-1 쪽)으로 이동시킬 수 있음
             - 만약 b가 큰 음수라면, 모델은 전체적으로 음수(-1) 예측을 하도록 치우치게 됨
 
+    - 일반적으로 편항 b를 분리해서 쓰지만, 수학적 표기에서는 불편함이 생겨 x0 = 1이라는 가상의 입력을 추가하고, w0​ = b로 두어 간단히 표현함
+      
     <br/>
 
     - 편향 항을 포함하는 것은 **필수적**이다
