--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -1,1 +1,55 @@
+### Terminology (용어 정리)
+
+- **output(출력)의 종류**
+
+    - **Machine Learning (머신러닝)**
+
+        - 입력과 출력 쌍을 가지고 학습하는 지도학습 형태
+     
+            - 비지도 학습과 강화 학습은 output이 존재 x 
+
+    - **Statistical literature (통계적 문헌)**
+ 
+        - {Predictors, Responses} 형태 :  (예측 변수, 반응)
+     
+        - {Independent variable, Dependent variables} 형태 : (독립변수(입력), 종속변수(출력))
+     
+    - **Quantitative Output (정량적 출력)**
+ 
+        - 출력값이 **수치**로 나오는 문제
+     
+        - 어떤 측정값은 다른 것보다 크거나 작다
+     
+    - **Qualitative Output (정성적 출력)**
+ 
+        - **범주(카테고리)** 로 분류하는 문제 
+      
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
