--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -22,8 +22,55 @@
      
     - **Qualitative Output (정성적 출력)**
  
-        - **범주(카테고리)** 로 분류하는 문제 
-      
+        - **범주(카테고리)** 로 분류하는 문제
+     
+        - 특수한 경우로 크기 순서가 존재하는 **순서형 범주형(ordered categorical)** 도 존재
+     
+            - ex: 티셔츠 사이즈 S, M, L
+
+<br/>
+
+- **문제별 역할 분류**
+
+    - Quantitative Output (정량적 출력) : 예측할 때는 **회귀(regression)** 사용
+ 
+    - Qualitative Output (정성적 출력) : 예측할 때는 **분류(classification)** 사용
+ 
+    - 어떤 방법들은 정량적 입력에 가장 적합하게 정의되고, 어떤 방법들은 정성적 입력에 더 적합하며, 어떤 방법들은 두 경우 모두에 사용할 수 있다
+ 
+        - 정량적 : 선형 회귀
+     
+        - 정성적 : 나이브 베이즈
+     
+        - 둘 다 : 결정 트리
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
