--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -44,13 +44,58 @@
      
         - 둘 다 : 결정 트리
 
+<br/>
+
+### Qualitative variables (정성적 출력)
+
+- **Qualitative variables (정성적 출력)** : 값이 수치가 아니라 **범주(카테고리)** 를 나타내는 변수
+
+    - 보통 숫자 코드로 표현함
+ 
+        - 보통 하나의 이진수(bit)로 0/1 또는 -1/1로 표현
+     
+        - 이런 숫자 코드를 타겟(target)이라고 부르기도 한다
+ 
+    - 범주가 두 개만 있을 때
+ 
+        - ex: 남=0, 여=1
+     
+    - 만약 범주가 두 개 이상일 경우 : **더미 변수(dummy variable)** 사용, 즉 **원-핫 인코딩(one-hot encoding)** 사용
+ 
+        - K개의 범주를 가진 질적 변수는 K개의 이진 변수(비트)로 표현되며, 한 번에 하나만 ‘켜져(on)’ 있다
+     
+        - ex: {Red, Blue, Green} → Red=(1,0,0), Blue=(0,1,0), Green=(0,0,1)
 
 
+- **우리의 목표**
 
+    - 입력 벡터 X가 주어졌을 때, **출력 Y를 잘 예측하는 것**이 목표이며, 예측값은 Ŷ(“y-hat”)으로 표시
+ 
+        - Y는 실제값, Ŷ는 모델의 예측값 
 
+<br/>
 
+### Statistical Decision Theory (통계적 의사결정 이론) : 정량적 출력
 
+- 정량적 출력을 수학적으로 다뤄보자
 
+    - X ∈ ℝᵖ : X는 p차원 실수값 (random input vector)
+
+    - Y ∈ ℝ : Y는 실수값(random output variable)
+
+    - Pr(X, Y) : X와 Y의 결합 분포(joint distribution)
+
+    - f(X) : 입력 X가 주어졌을 때 Y를 예측하는 함수
+ 
+        - **머신러닝의 목표**는 Y를 잘 표현할 수 있는 f(x)를 찾는 것 
+     
+    - L(Y, f(X)) : 손실함수
+ 
+        - 가장 흔한 손실함수 : L(Y, f(X)) = (Y – f(X))² (제곱 오차(squared error loss))
+
+<br/>
+
+- **기대 제곱 예측 오차(Expected squared prediction error)**
 
 
 
