--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -97,10 +97,13 @@
 
 - **기대 제곱 예측 오차(Expected squared prediction error)**
 
-
-
-
-
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE.png)
+ 
+    - 기대 제곱 예측 오차(EPE)는 (Y – f(X))²의 **기댓값**
+      
+    - 이것은 f를 선택하는 기준으로 사용
+ 
+    - 단순히 훈련 데이터에서 오차를 최소화하는 게 아니라, 전체 분포에서 **평균적으로** 오차가 최소가 되는 함수 f를 찾는 게 목표
 
 
 
