--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -75,7 +75,7 @@
 
 <br/>
 
-### Statistical Decision Theory (통계적 의사결정 이론) : 정량적 출력
+### Statistical Decision Theory (통계적 의사결정 이론) : 정량적 출력 용어 정리
 
 - 정량적 출력을 수학적으로 다뤄보자
 
@@ -95,14 +95,24 @@
 
 <br/>
 
+### 기대 제곱 예측 오차(Expected squared prediction error)
+
 - **기대 제곱 예측 오차(Expected squared prediction error)**
 
     - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE.png)
  
     - 기대 제곱 예측 오차(EPE)는 (Y – f(X))²의 **기댓값**
+ 
+        - **기대값(expectation)** : 어떤 과정을 무한히 반복했을 때 얻게 되는 평균 결과
+     
+        - 기대값은 E로 표기하고 **확률 분포**에 의해 정해지는 **가중 평균**이다 
       
     - 이것은 f를 선택하는 기준으로 사용
  
+    - 여기서 우리는 입력(X)과 출력(Y) 모두에서 확률 변수와 불확실성을 다룬다
+ 
+        - 입력과 출력이 고정된 값이 아니라, 확률적으로 변할 수 있으므로 전체 분포에 걸친 평균적 오차를 계산해야 한다
+
     - 단순히 훈련 데이터에서 오차를 최소화하는 게 아니라, 전체 분포에서 **평균적으로** 오차가 최소가 되는 함수 f를 찾는 게 목표
 
 
