--- a/Discrete Structures/Discrete Structures study/03-1장.md
+++ b/Discrete Structures/Discrete Structures study/03-1장.md
@@ -260,10 +260,25 @@
 
 <br/>
 
-### p.16부터
+### Set Operations (집합 연산)
 
+- **Union (합집합)**
 
+    - x가 A에 속하거나 B에 속하는 원소들의 집합
+    
+    - **A ∪ B** 로 표기 
 
+    - ![System Resources](../../images/Discrete%20Structures%20images/합집합공식.png)
+
+<br/>
+
+- **intersection (교집합)**
+
+    - x가 A에도 속하면서, **동시에** B에도 속하는 원소들의 집합
+ 
+    - **A ∩ B** 로 표기
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/교집합공식.png)
 
 
 
