--- a/Discrete Structures/Discrete Structures study/03-1장.md
+++ b/Discrete Structures/Discrete Structures study/03-1장.md
@@ -279,9 +279,19 @@
     - **A ∩ B** 로 표기
  
     - ![System Resources](../../images/Discrete%20Structures%20images/교집합공식.png)
+ 
+    - 만약 교집합이 비어있다면, A와 B는 **서로소(disjoint)** 라고 한다
 
+<br/>
 
+- **complement (여집합)**
 
+    - 전체 집합 U에서 A에 **속하지 않는** 원소들을 모은 집합이 여집합
+ 
+    - **U − A** 로 표기
+
+![System Resources](../../images/Discrete%20Structures%20images/여집합공식.png)
+![System Resources](../../images/Discrete%20Structures%20images/차집합공식.png)
 
 
 
