--- a/Discrete Structures/Discrete Structures study/03-1장.md
+++ b/Discrete Structures/Discrete Structures study/03-1장.md
@@ -264,35 +264,53 @@
 
 - **Union (합집합)**
 
+    - ![System Resources](../../images/Discrete%20Structures%20images/합집합공식.png)
+
     - x가 A에 속하거나 B에 속하는 원소들의 집합
     
     - **A ∪ B** 로 표기 
-
-    - ![System Resources](../../images/Discrete%20Structures%20images/합집합공식.png)
 
 <br/>
 
 - **intersection (교집합)**
 
+    - ![System Resources](../../images/Discrete%20Structures%20images/교집합공식.png)
+
     - x가 A에도 속하면서, **동시에** B에도 속하는 원소들의 집합
  
     - **A ∩ B** 로 표기
- 
-    - ![System Resources](../../images/Discrete%20Structures%20images/교집합공식.png)
- 
+
     - 만약 교집합이 비어있다면, A와 B는 **서로소(disjoint)** 라고 한다
 
 <br/>
 
 - **complement (여집합)**
 
-    - 전체 집합 U에서 A에 **속하지 않는** 원소들을 모은 집합이 여집합
+    - ![System Resources](../../images/Discrete%20Structures%20images/여집합공식.png) 
+
+    - 전체 집합 U에서 A에 속하지 않는 원소들을 모은 집합이 여집합
  
-    - **U − A** 로 표기
+    - **U − A**, **Ac**로 표기
+ 
+<br/>
 
-![System Resources](../../images/Discrete%20Structures%20images/여집합공식.png)
-![System Resources](../../images/Discrete%20Structures%20images/차집합공식.png)
+- **set difference (차집합)**
 
+    - ![System Resources](../../images/Discrete%20Structures%20images/차집합공식.png)
+
+    - A에는 속하지만 B에는 속하지 않는 원소들의 집합
+ 
+    - **A − B** 로 표기
+
+<br/>
+
+### 두 집합의 합집합의 크기
+
+- **Inclusion-Exclusion Principle (포함-배제 원리)**
+  
+    - ![System Resources](../../images/Discrete%20Structures%20images/합집합의크기.png)
+
+    - 겹치는 부분을 **중복해서 세지 않도록** 하는 공식
 
 
 
