--- a/Discrete Structures/Discrete Structures study/03-1장.md
+++ b/Discrete Structures/Discrete Structures study/03-1장.md
@@ -311,6 +311,10 @@
     - ![System Resources](../../images/Discrete%20Structures%20images/합집합의크기.png)
 
     - 겹치는 부분을 **중복해서 세지 않도록** 하는 공식
+ 
+    - ex: 수학 전공 또는 컴공 전공 학생의 수를 구하시오
+ 
+        - 수학 학생 수 + 컴공 학생 수 - 복수 전공(수학&컴공) 학생 수 
 
 
 
