--- a/Discrete Structures/Discrete Structures study/03-1장.md
+++ b/Discrete Structures/Discrete Structures study/03-1장.md
@@ -316,9 +316,40 @@
  
         - 수학 학생 수 + 컴공 학생 수 - 복수 전공(수학&컴공) 학생 수 
 
+<br/>
 
+- - Example: U = {0,1,2,3,4,5,6,7,8,9,10}   A = {1,2,3,4,5},   B = {4,5,6,7,8}
 
+    - 1. A ∪ B
+         
+      - Solution: {1,2,3,4,5,6,7,8}
 
+    - 2. A ∩ B
+     
+      - Solution: {4,5}
+
+    - 3. Ā  
+     
+      - Solution: {0,6,7,8,9,10}
+
+    - 4. B̄  
+
+      - Solution: {0,1,2,3,9,10}
+
+    - 5. A − B  
+    
+      - Solution: {1,2,3}
+
+    - 6. B − A  
+  
+      - Solution: {6,7,8}
+
+<br/>
+
+### 추가 법칙 
+
+![System Resources](../../images/Discrete%20Structures%20images/set추가법칙1.png)
+![System Resources](../../images/Discrete%20Structures%20images/set추가법칙2.png)
 
 
 
