--- a/Discrete Structures/Discrete Structures study/03-1장.md
+++ b/Discrete Structures/Discrete Structures study/03-1장.md
@@ -351,9 +351,29 @@
 ![System Resources](../../images/Discrete%20Structures%20images/set추가법칙1.png)
 ![System Resources](../../images/Discrete%20Structures%20images/set추가법칙2.png)
 
+<br/>
 
+### Function (함수)
 
+- **함수 정의**
 
+    - A와 B가 공집합이 아닌 집합이라고 하자
+ 
+    - 수 f는 A에서 B로 가는 함수이고, **𝑓 : 𝐴 → 𝐵** 로 표시한다
+ 
+        - 만약 A의 원소 a가 함수 f에 의해 B의 유일한 원소 b에 대응된다면, 우리는 이를 **𝑓(𝑎) = 𝑏** 라고 쓴다
+ 
+        - 여기서 핵심은 A의 원소가 **B의 단 하나의 원소에 대응시켜야한다는 것** 이다
+     
+            - ex: f(1) = 2 이면서 f(1) = 3 이면 안 됨
+              
+    - 함수는 **매핑(mappings)** 또는 **변환(transformations)** 이라고도 불린다
+ 
+    - 함수 f는 집합 A와 B의 곱집합 **A×B의 부분집합**으로 정의될 수도 있다
+
+<br/>
+
+### p.24 함수를 부분집합으로 설명하는 부분 공부 pdf 내용 : ' A function f: A → B can also be defined as a subset of A× B(a relation). This subset is restricted to be a relation where no two elements of the relation have the same first element.'
 
 
 
