--- a/Discrete Structures/Discrete Structures study/03-1장.md
+++ b/Discrete Structures/Discrete Structures study/03-1장.md
@@ -357,6 +357,8 @@
 
 - **함수 정의**
 
+    - ![System Resources](../../images/Discrete%20Structures%20images/함수정의.png) 
+
     - A와 B가 공집합이 아닌 집합이라고 하자
  
     - 수 f는 A에서 B로 가는 함수이고, **𝑓 : 𝐴 → 𝐵** 로 표시한다
@@ -370,10 +372,15 @@
     - 함수는 **매핑(mappings)** 또는 **변환(transformations)** 이라고도 불린다
  
     - 함수 f는 집합 A와 B의 곱집합 **A×B의 부분집합**으로 정의될 수도 있다
+ 
+        - ex: 집합 A = {1, 2, 3}
 
-<br/>
+        - ex: 집합 B = {a, b}
 
-### p.24 함수를 부분집합으로 설명하는 부분 공부 pdf 내용 : ' A function f: A → B can also be defined as a subset of A× B(a relation). This subset is restricted to be a relation where no two elements of the relation have the same first element.'
+        - 데카르트 곱 A × B = {(1, a), (1, b), (2, a), (2, b), (3, a), (3, b)}
+     
+            - 여기서 원소 1은 a와 b 중 하나만 가져야 함  
+
 
 
 
