--- a/Discrete Structures/Discrete Structures study/03-1장.md
+++ b/Discrete Structures/Discrete Structures study/03-1장.md
@@ -357,11 +357,18 @@
 
 - **함수 정의**
 
-    - ![System Resources](../../images/Discrete%20Structures%20images/함수정의.png) 
+    - ![System Resources](../../images/Discrete%20Structures%20images/함수정의.png)
+    
+        - 첫번째 식 : 모든 입력 x (A의 원소)에 대해, 어떤 출력 y (B의 원소)가 존재해서 (x, y)가 함수 f에 속한다
+     
+        - 두번째 식 : 모든 x에 대해, 만약 (x, y₁)과 (x, y₂)가 동시에 함수 f에 속한다면, y₁과 y₂는 반드시 같다
+    
 
     - A와 B가 공집합이 아닌 집합이라고 하자
  
     - 수 f는 A에서 B로 가는 함수이고, **𝑓 : 𝐴 → 𝐵** 로 표시한다
+ 
+        - "f가 A를 B로 **사상(maps)** 한다" 라고 함 
  
         - 만약 A의 원소 a가 함수 f에 의해 B의 유일한 원소 b에 대응된다면, 우리는 이를 **𝑓(𝑎) = 𝑏** 라고 쓴다
  
