--- a/Discrete Structures/Discrete Structures study/03-1장.md
+++ b/Discrete Structures/Discrete Structures study/03-1장.md
@@ -362,8 +362,9 @@
         - 첫번째 식 : 모든 입력 x (A의 원소)에 대해, 어떤 출력 y (B의 원소)가 존재해서 (x, y)가 함수 f에 속한다
      
         - 두번째 식 : 모든 x에 대해, 만약 (x, y₁)과 (x, y₂)가 동시에 함수 f에 속한다면, y₁과 y₂는 반드시 같다
-    
 
+    <br/>
+   
     - A와 B가 공집합이 아닌 집합이라고 하자
  
     - 수 f는 A에서 B로 가는 함수이고, **𝑓 : 𝐴 → 𝐵** 로 표시한다
@@ -375,7 +376,9 @@
         - 여기서 핵심은 A의 원소가 **B의 단 하나의 원소에 대응시켜야한다는 것** 이다
      
             - ex: f(1) = 2 이면서 f(1) = 3 이면 안 됨
-              
+
+    <br/>
+    
     - 함수는 **매핑(mappings)** 또는 **변환(transformations)** 이라고도 불린다
  
     - 함수 f는 집합 A와 B의 곱집합 **A×B의 부분집합**으로 정의될 수도 있다
@@ -388,24 +391,69 @@
      
             - 여기서 원소 1은 a와 b 중 하나만 가져야 함  
 
+<br/>
 
+- **domain (정의역)**
 
+    - **domain (정의역)** : **입력값**들이 들어있는 집합 
 
+    - f: A → B 에서 A는 f의 **정의역(domain)** 이라고 불린다
 
+<br/>
 
+- **codomain (공역)**
 
+    - **codomain (공역)** : **출력값**이 나올 수 있는 **전체 집합**
+ 
+    -  f: A → B 에서 B는 f의 **codomain (공역)** 이라고 불린다
 
+    - **range (치역)** : A의 원소들이 f에 의해 **사상된** 모든 상들의 집합
 
+<br/>
 
+- f(a) = b라면, b는 f에서 a의 **상(image)** 이고, a는 b의 **원상(preimage)**
 
+- 두 함수가 같다고 말하려면, **같은 정의역, 같은 공역**을 가지며, **정의역의 각 원소를 공역의 같은 원소로 대응**시켜야 한다
 
+<br/>
 
+- 정리하면 
 
+    - Domain (정의역) = 입력 집합
 
+    - Codomain (공역) = 가능한 출력 전체
 
+    - Range (치역) = 실제로 나온 출력들
 
+    - Image (상) = 입력에 대응된 출력
 
+    - Preimage (원상) = 어떤 출력에 연결된 입력
 
+    - 두 함수가 같다 = 정의역, 공역, 대응 결과 모두 동일해야 함
+
+<br/>
+
+### 함수 표현 
+
+- 함수는 여러 가지 방식으로 정의될 수 있다
+
+    - (1) : 대응 관계를 명시적으로 나열하는 방법
+ 
+        - 성적 ex: { (Carlota, A), (Sandeep, C), (Jalen, B), (Kathy, F) } 
+
+    - 공식으로 표현하는 방법
+ 
+        - ex: f(x) = x + 1
+     
+    - 컴퓨터 프로그램으로 정의
+ 
+        - ex: 정수 n을 입력하면 n번째 피보나치 수를 출력하는 Java 프로그 
+
+<br/>
+
+### 예시 문제 풀이 
+
+![System Resources](../../images/Discrete%20Structures%20images/함수예시문제풀이.png)
 
 
   
