--- a/Discrete Structures/Discrete Structures study/03-2장.md
+++ b/Discrete Structures/Discrete Structures study/03-2장.md
@@ -4,10 +4,10 @@
 
     -   즉, **서로 다른 입력**은 반드시 **서로 다른 출력**으로 가야 한다 (겹치는 출력 없음)
  
-    -   
+    -   ![System Resources](../../images/Discrete%20Structures%20images/일대일함수.png)
 
 
-
+![System Resources](../../images/Discrete%20Structures%20images/전사함수.png)
 
 
 
