--- a/Discrete Structures/Discrete Structures study/03-2장.md
+++ b/Discrete Structures/Discrete Structures study/03-2장.md
@@ -6,8 +6,15 @@
  
     -   ![System Resources](../../images/Discrete%20Structures%20images/일대일함수.png)
 
+<br/>
 
-![System Resources](../../images/Discrete%20Structures%20images/전사함수.png)
+### Surjective (전사 함수)
+
+- 정의 : 공역 B의 모든 원소 b에 대해, 반드시 A에 속하는 어떤 a가 있어서 f(a) = b가 되어야 한다
+
+    - 즉, 공역 B에 있는 원소가 빠짐없이 **모두 선택**되어야 한다  
+
+    - ![System Resources](../../images/Discrete%20Structures%20images/전사함수.png)
 
 
 
