--- a/Discrete Structures/Discrete Structures study/03-3장.md
+++ b/Discrete Structures/Discrete Structures study/03-3장.md
@@ -7,3 +7,25 @@
     - **False**
  
     - ![System Resources](../../images/Discrete%20Structures%20images/3장퀴즈1-1번.png)
+
+<br/>
+
+- 문제 2 : A={1,2,3,4,5} 일 때, {1,3} ∈ A x A
+
+    - **False**
+ 
+    - A x A는 데카르트 곱(Cartesian Product) : 순서쌍 (a, b)로 이루어진 집합
+ 
+    - 즉, A × A = {(1,1), (1,2), …, (5,5)}
+ 
+    - 따라서 {1,3} 이 아니라 **{(1,3)}** 와 같이 **순서쌍**으로 표현해야함
+
+<br/>
+
+- 문제 3 : A = {1,2,3,4,5} 일 때, ∅ ∈ P(A)
+
+    - **True**
+ 
+    - P(A)는 A의 멱집합(Power Set) : 즉 A의 모든 부분집합들의 집합
+ 
+    - **멱집합에는 반드시 공집합 ∅도 포함**
