--- a/Discrete Structures/Discrete Structures study/03-3장.md
+++ b/Discrete Structures/Discrete Structures study/03-3장.md
@@ -29,3 +29,113 @@
     - P(A)는 A의 멱집합(Power Set) : 즉 A의 모든 부분집합들의 집합
  
     - **멱집합에는 반드시 공집합 ∅도 포함**
+
+<br/>
+
+- 문제 4 : 함수 f가 자연수 N → 자연수 N 이고, f(n) = n + 1 이라고 하자. 다음에 답하시오
+
+    - ![System Resources](../../images/Discrete%20Structures%20images/3장퀴즈2-1번.png)
+
+    - 일대일 함수인가 ?
+ 
+        - **True**
+     
+        - 서로 다른 입력값이 서로 다른 출력값을 가지기 때문
+     
+    - 전사함수인가 ?
+ 
+        - **False**
+     
+        - 전사함수 조건 : 공역 N의 모든 원소가 적어도 하나의 원소로부터 매핑되어야 함
+     
+        - 1은 출력으로 절대 나오지 않음 -> 전사함수 x 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
