--- a/Discrete Structures/Discrete Structures study/03-3장.md
+++ b/Discrete Structures/Discrete Structures study/03-3장.md
@@ -50,8 +50,15 @@
      
         - 1은 출력으로 절대 나오지 않음 -> 전사함수 x 
 
+<br/>
 
+### 함수 그래프 설명 
 
+- f를 집합 A에서 집합 B로 가는 함수라고 하자
+
+    - 함수 f의 그래프는 순서쌍들의 집합이다
+
+    - ![System Resources](../../images/Discrete%20Structures%20images/함수그래프설명.png)
 
 
 
