--- a/Discrete Structures/Discrete Structures study/03-3장.md
+++ b/Discrete Structures/Discrete Structures study/03-3장.md
@@ -52,7 +52,7 @@
 
 <br/>
 
-### 함수 그래프 설명 
+### 함수 그래프 및 종류 
 
 - f를 집합 A에서 집합 B로 가는 함수라고 하자
 
@@ -60,7 +60,21 @@
 
     - ![System Resources](../../images/Discrete%20Structures%20images/함수그래프설명.png)
 
+<br/>
 
+- **floor function (바닥 함수)**
+
+    - **f(x) = ⌊x⌋** : x보다 **작거나 같은** 정수 중 가장 큰 값
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/바닥함수.png)
+
+<br/>
+
+- **ceiling function (천장 함수)**
+
+    - **f(x) = ⌈x⌉** x보다 **크거나 같은** 정수 중 가장 작은 값
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/천장함수.png)
 
 
 
