--- a/Discrete Structures/Discrete Structures study/03-2장.md
+++ b/Discrete Structures/Discrete Structures study/03-2장.md
@@ -1,6 +1,6 @@
-### Injective (일대일 함수)
+### Injective ( 전사, one-to-one function (일대일 함수) )
 
-- 정의: f(a) = f(b)일 때 항상 a = b여야 한다
+- **정의**: f(a) = f(b)일 때 항상 a = b여야 한다
 
     -   즉, **서로 다른 입력**은 반드시 **서로 다른 출력**으로 가야 한다 (겹치는 출력 없음)
  
@@ -10,22 +10,51 @@
 
 ### Surjective (전사 함수)
 
-- 정의 : 공역 B의 모든 원소 b에 대해, 반드시 A에 속하는 어떤 a가 있어서 f(a) = b가 되어야 한다
+- **정의** : 공역 B의 모든 원소 b에 대해, 반드시 A에 속하는 어떤 a가 있어서 f(a) = b가 되어야 한다
 
     - 즉, 공역 B에 있는 원소가 빠짐없이 **모두 선택**되어야 한다  
 
     - ![System Resources](../../images/Discrete%20Structures%20images/전사함수.png)
+ 
+    - **전사** : 공역(출력 집합)의 모든 원소가 반드시 연결
+ 
+    - **단사** : 다른 입력은 반드시 다른 출력으로 간다
 
+<br/>
 
+### one-to-one correspondence (일대일 대응)
 
+- **정의** : 입력이 겹치지 않고( = 단사, injective ), 출력이 빠짐없이 다 쓰이는( = 전사, surjective ) 함수
 
+    - **즉, 모든 입력이 겹치지 않으면서 모든 공역이 선택을 받아야함**
+ 
+    - 일대일 함수 + 전사 개념
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/일대일대응.png)
 
+<br/>
 
+###  Inverse Function (역함수) 
 
+- **정의** : 함수 f가 집합 A에서 집합 B로 가는 전단사(bijection)라고 하자
 
+    - 이때, 역함수는 이렇게 정의한다
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/역함수정의.png)
+ 
+        - ex: f(3) = 6 이라면 f^-1(6) = 3 
 
+<br/>
 
+- 핵심 : **f가 전단사(bijection)가 아니면 역함수는 존재하지 않는다**
 
+    - 역함수를 하게 되면, f의 공역이 역함수의 정의역이 된다
+ 
+    - 전사 조건 : 이 경우 f가 전사가 아니라면, 역함수의 정의역에 매핑되지 않은 원소가 발생하게 된다
+ 
+    - 단사 조건 : f가 단사가 아니라면 역함수의 정의역이 동시에 다른 2개의 출력값을 가지게 된다
+
+    - 따라서 역함수는 반드시 전단사여야한다
 
 
 
