--- a/Discrete Structures/Discrete Structures study/03-2장.md
+++ b/Discrete Structures/Discrete Structures study/03-2장.md
@@ -42,7 +42,11 @@
  
     - ![System Resources](../../images/Discrete%20Structures%20images/역함수정의.png)
  
-        - ex: f(3) = 6 이라면 f^-1(6) = 3 
+        - ex: f(3) = 6 이라면 f^-1(6) = 3
+     
+    - 역함수의 전체적인 구조는 아래와 같다
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/역함수구조.png) 
 
 <br/>
 
@@ -54,7 +58,7 @@
  
     - 단사 조건 : f가 단사가 아니라면 역함수의 정의역이 동시에 다른 2개의 출력값을 가지게 된다
 
-    - 따라서 역함수는 반드시 전단사여야한다
+    - 따라서 역함수는 **반드시 전단사**여야한다
 
 
 
