--- a/Discrete Structures/Discrete Structures study/03-2장.md
+++ b/Discrete Structures/Discrete Structures study/03-2장.md
@@ -60,9 +60,37 @@
 
     - 따라서 역함수는 **반드시 전단사**여야한다
 
+<br/>
 
+### 역함수 구분 문제 
 
+- 문제 1 : 집합 {a,b,c}에서 {1,2,3}으로 가는 함수 f를 정의한다. 여기서 f(a)=2, f(b)=3, f(c)=1 이다. 이 함수 f가 역함수를 가질 수 있는가 ?
 
+    - 역함수를 증명하기 위해선 **일대일 대응만 증명**하면 된다
+ 
+    - f⁻¹(2) = a, f(b) = 3 이므로 f⁻¹(3) = b 이므로 겹치지 않음 -> **True**
+ 
+<br/>
+
+- 문제 2 : f: Z → Z (정수 집합 Z에서 Z로 가는 함수) f(x) = x+1 는 역함수를 가지는가?
+
+    - 여기서 핵심은 **반드시** y = x + 1 로 한 뒤 **x에 대해서 정리**하는 것이다
+ 
+        - 만약 x에 대해 젇리하지 않고 단순하게 판단해버리면 정의역에서 0이 역함수로 변환 뒤에 선택이 안 된다고 생각할 수 있다
+     
+        - 식을 정리하면 x = y - 1 이고 f⁻¹(y) = y−1 이므로 기존 정의역의 원소 0이 포함이 된다
+     
+        - **True**
+    
+<br/>
+
+- 문제 3 : f: R → R (실수 전체에서 실수 전체로 가는 함수) f(x) = x² 는 역함수를 가지는가 ?
+
+    - x에 대해 정리하면 x = ± 루트 y 이다.
+ 
+    - 따라서 x = 4인 경우 y가 2와 -2이므로 역함수가 아니다
+ 
+    - **False**
 
 
 
