--- a/Discrete Structures/Discrete Structures study/03-2장.md
+++ b/Discrete Structures/Discrete Structures study/03-2장.md
@@ -1,4 +1,4 @@
-### Injective ( 전사, one-to-one function (일대일 함수) )
+<img width="657" height="335" alt="image" src="https://github.com/user-attachments/assets/6e6629e9-0402-40e0-aaeb-e31340a90470" /><img width="201" height="36" alt="image" src="https://github.com/user-attachments/assets/80c300f0-8ca3-400c-ae2a-6f2f739d76c8" />### Injective ( 전사, one-to-one function (일대일 함수) )
 
 - **정의**: f(a) = f(b)일 때 항상 a = b여야 한다
 
@@ -98,9 +98,13 @@
 
 - **정의**
 
-    - f : B → C , g : A → B 라고 하자
+    - f : B → C , g : A → B 라고 하자. 이때 f와 g의 합성 함수 f∘g는 A에서 C로 가는 함수이며 **f∘g(x) = f(g(x))** 로 표기한다
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/함성함수공식.png)
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/함성함수구.png)
+ 
 
-- 
 
 
 
