--- a/Discrete Structures/Discrete Structures study/03-2장.md
+++ b/Discrete Structures/Discrete Structures study/03-2장.md
@@ -100,9 +100,9 @@
 
     - f : B → C , g : A → B 라고 하자. 이때 f와 g의 합성 함수 f∘g는 A에서 C로 가는 함수이며 **f∘g(x) = f(g(x))** 로 표기한다
  
-    - ![System Resources](../../images/Discrete%20Structures%20images/함성함수공식.png)
+    - ![System Resources](../../images/Discrete%20Structures%20images/합성함수공식.png)
  
-    - ![System Resources](../../images/Discrete%20Structures%20images/함성함수구.png)
+    - ![System Resources](../../images/Discrete%20Structures%20images/합성함수구조.png)
  
 
 
