--- a/Discrete Structures/Discrete Structures study/03-3장.md
+++ b/Discrete Structures/Discrete Structures study/03-3장.md
@@ -76,19 +76,64 @@
  
     - ![System Resources](../../images/Discrete%20Structures%20images/천장함수.png)
 
+<br/>
+
+### sequence (수열)
+
+- **수열 정의** : 정수의 부분집합에서 어떤 집합 S로 가는 함수이다
+
+    - f : {0,1,2,3, … } → S 또는 f : {1,2,3, … } → S 꼴
+ 
+    - 기호 an은 **수열의 항(term)** 이라 하고, 정수 n이 함수에 의해 대응되는 값을 나타내는 데 사용된
+ 
+        - an은 f(n) 와 같다  
+
+    - ![System Resources](../../images/Discrete%20Structures%20images/수열공식예.png)
+
+<br/>
+
+- **geometric progression (등비수열)**
+
+    - ![System Resources](../../images/Discrete%20Structures%20images/등비수열형태.png)
+ 
+    - 아래는 등비수열 예시이다
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/등비수열예시.png)
 
 
+<br/>
 
+- **arithmetic progression (등차수열)**
 
+    - ![System Resources](../../images/Discrete%20Structures%20images/등차수열형태.png)
+ 
+    - 아래는 등차수열 예시이다
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/등차수열예시.png)
 
+<br/>
 
+- **recurrence relation (점화식)**
 
+    - 수열 {an}의 점화식 :  an 을 그 앞의 항들 (a0, a1, …, an-1) 중 하나 이상으로 표현하는 방정식을 말한다 (n은 0 이상의 정수)
+ 
+        - 수열이 어떤 점화식을 만족한다면, 그 수열을 **점화식의 해** 라고 한다
+     
+        - **수열의 초기 조건(initial conditions)** : 점화식이 적용되기 전에 필요한 처음 항들을 정해주는 것
+     
+            - ex: 피보나치 수열에서 f0 = 0, f1= 1 과 같이 처음 세팅하는 부분  
 
+    <br/>
 
-
-
-
-
+    - **피보나치 수열**
+ 
+        - 초기 조건 : f0 = 0, f1 = 1
+     
+        - 점화식 : fn = fn−1 + fn−2
+     
+            - 세 번째 항부터 앞의 두 항을 더한 값으로 정한다
+         
+        - ![System Resources](../../images/Discrete%20Structures%20images/피보나치수열솔루션.png)
 
 
 
