--- a/Discrete Structures/Discrete Structures study/03-3장.md
+++ b/Discrete Structures/Discrete Structures study/03-3장.md
@@ -135,7 +135,17 @@
          
         - ![System Resources](../../images/Discrete%20Structures%20images/피보나치수열솔루션.png)
 
+<br/>
 
+- **Summations (합)**
+
+    - 수열 {an}에서 am, am+1, …, an 까지의 항들을 더한 합
+ 
+    - 수열의 합은 **시그마(Σ)** 로 표현
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/시그마공식.png)
+ 
+    - 
 
 
 
