--- a/Discrete Structures/Discrete Structures study/03-3장.md
+++ b/Discrete Structures/Discrete Structures study/03-3장.md
@@ -88,7 +88,7 @@
  
         - an은 f(n) 와 같다  
 
-    - ![System Resources](../../images/Discrete%20Structures%20images/수열공식예.png)
+    - ![System Resources](../../images/Discrete%20Structures%20images/수열공식예시.png)
 
 <br/>
 
