--- a/Discrete Structures/Discrete Structures study/03-3장.md
+++ b/Discrete Structures/Discrete Structures study/03-3장.md
@@ -145,9 +145,21 @@
  
     - ![System Resources](../../images/Discrete%20Structures%20images/시그마공식.png)
  
-    - 
+<br/>
 
+- **product notation (곱)**
 
+    - 수열 {an}에서 am, am+1, …, an 까지의 항들을 곱한 값
+ 
+    - 수열의 곱은 **파이(∏)** 로 표현
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/파이공식.png)
+
+<br/>
+
+- **유용한 공식**
+
+    - ![System Resources](../../images/Discrete%20Structures%20images/유용한시그마공식.png)
 
 
 
