--- a/Discrete Structures/Discrete Structures study/03-3장.md
+++ b/Discrete Structures/Discrete Structures study/03-3장.md
@@ -161,7 +161,33 @@
 
     - ![System Resources](../../images/Discrete%20Structures%20images/유용한시그마공식.png)
 
+<br/>
 
+### cardinality (크기)
+
+- 집합 A와 집합 B가 있다고 하자
+
+    - 두 집합의 크기가 같을 때 : |A| = |B|
+ 
+        - **일대일 대응**일 때만 성립 
+ 
+        - ex: f(n) = 2n 이고 무한 집합의 경우
+     
+            - 1 → 2,
+
+            - 2 → 4,
+
+            - 3 → 6, . . .
+         
+        - ex: 유한집합인 경우
+        
+            - A = {사과, 바나나, 포도}
+            
+            - B = {빨강, 파랑, 초록}   
+
+    - B 집합이 A 집합보다 크거나 같을 때 : |A| ≤ |B|
+ 
+        - **일대일 함수** 일 때 성립 
 
 
 
