--- a/Discrete Structures/Discrete Structures study/03-3장.md
+++ b/Discrete Structures/Discrete Structures study/03-3장.md
@@ -191,7 +191,41 @@
 
 <br/>
 
-### p.17부터
+### countable set (가산 집합) & 비가산 집합(uncountable set)
+
+- **countable set (가산 집합)** : 집합이 유한하거나, 양의 정수 집합(Z⁺)과 크기(기수)가 같을 때
+
+    -  양의 정수 집합(Z⁺)과 크기(기수)가 같다는 것은 해당 집합의 원소를 1,2,3 .. 처럼 셀 수 있다는 것이다
+ 
+        - 자연수 집합 : Z⁺ = {1, 2, 3, 4, …}
+
+            - 자기 자신과 1대1 대응 가능
+
+        - 짝수 집합 : E = {2, 4, 6, 8, …}
+          
+            - f(n) = 2n 으로 자연수와 1대1 대응 가능
+
+        - 정수 전체 집합 : Z = {0, 1, −1, 2, −2, 3, −3, …}
+          
+            - 자연수로 순서를 지그재그로 붙이면 1대1 대응 가능
+
+        - 유리수 집합 : Q = {p/q | p, q ∈ Z, q ≠ 0}
+          
+            - 표처럼 배열해 “대각선 방법”으로 하나씩 세면 셀 수 있음
+
+<br/>
+
+- **비가산 집합(uncountable set)** : 셀 수 없는 집합
+
+    - 실수 집합 R
+       
+        - 0과 1 사이 구간 (0,1)조차도 비가산 집합 (Cantor의 대각선 논법으로 증명)
+
+    - 구간 집합 [0,1]
+    
+        - 이 구간 안에도 무한히 많은 실수가 있으므로 자연수로는 전부 나열 불가
+
+
 
 
 
