--- a/Natural Language Processing/Natural Language Processing study/03-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/03-1장.md
@@ -178,11 +178,112 @@ print(document_vector)
 
 <br/>
 
-### p.13 부터
+### 벡터를 통한 유사도 계산
+
+- 아래 코드 예시를 통해 유사도를 확인해보자 
+
+```ruby
+from nltk.tokenize import word_tokenize
+
+
+# 비교할 세 문장 준비
+docs = [  "The faster Harry got to the store, the faster and faster Harry would get home."
+]
+docs.append("Harry is hairy and faster than Jill.")
+docs.append("Jill is not as hairy as Harry.")
+
+
+doc_tokens = []  # 문장별 토큰 리스트를 담을 그릇
+for doc in docs:
+    doc_tokens += [sorted(word_tokenize(doc.lower()))]  # 각 문장을 소문자화 + 단어 토큰화 + 정렬해서 리스트에 저장
+
+
+# 첫 번째 문장의 토큰 개수
+len(doc_tokens[0])  
+# 출력 결과: 17
+# (예: ['.', ',', 'and', 'faster', 'faster', 'faster', 'get', 'got', 'harry', 'harry', 'home', 'store', 'the', 'the', 'to', 'would', '...'])
+
+# 세 문장의 모든 토큰을 하나의 리스트로 합침
+all_doc_tokens = sum(doc_tokens, [])  
+len(all_doc_tokens)  
+# 출력 결과: 33 (3문장에서 나온 전체 토큰 개수)
+
+# 고유 단어(중복 제거) 집합을 만든 뒤 정렬 → 어휘집(lexicon)
+lexicon = sorted(set(all_doc_tokens))  
+len(lexicon)  
+# 출력 결과: 18 (고유 단어 개수)
+
+lexicon  
+# 출력 결과:
+# [',', '.', 'and', 'as', 'faster', 'get', 'got', 'hairy',
+#  'harry', 'home', 'is', 'jill', 'not', 'store', 'than',
+#  'the', 'to', 'would']
+
+```
+
+- 현재 모든 3개 문서에 등장하는 토큰이 18개 있으므로 각 문서를 표현하기 위해서 18개의 성분을 가진 벡터가 필요함
+
+    - 특정 문서에 **등장하지 않는 단어**는 출현 횟수/빈도가 **0**이 됨
+ 
+    - 또한 각 벡터의 성분의 위치(index)에 따라 대응되는 토큰이 **동일하게 유지**되어야 함
+ 
+        - 즉, 인덱스 0은 항상 ,, 인덱스 1은 항상 ., 인덱스 2는 항상 and 로 고정이 되어야 비교가 가능하다
+     
+- 아래 코드는 위 코드를 이어서 유사도를 계산하는 코드이다
+
+<br/>
+
+```ruby
+from collections import OrderedDict  # 일반 dict와 달리 입력한 순서를 유지
+zero_vector = OrderedDict((token, 0) for token in lexicon) # 휘집에 있는 단어들을 하나씩 꺼내서 각 단어를 key로 하고, 값은 0으로 설정
 
 
 
+# zero_vector 출력 예시 : OrderedDict([(',', 0), ('.', 0), ('and', 0), ('as', 0),
+#             ('faster', 0), ('get', 0), ('got', 0), 
+#             ('hairy', 0), ('harry', 0), ('home', 0), 
+#             ('is', 0), ('jill', 0), ('not', 0), 
+#             ('store', 0), ('than', 0), ('the', 0), 
+#             ('to', 0), ('would', 0)])
 
+
+
+import copy  # 위에서 만든 zero_vector
+doc_vectors = []   # 문서별 TF 벡터를 담을 리스트
+
+for doc in docs:
+    vec = copy.copy(zero_vector)     # zero_vector를 복사해서 새로운 벡터 생성, copy.copy()를 두 번 한 이유는 모듈 이름과 함수 이름이 동일하기 때문 
+    tokens = tokenizer.tokenize(doc.lower())   # 문장을 소문자로 바꾸고 토큰화
+    token_counts = Counter(tokens)   # 각 단어별 출현 횟수 계산
+    
+    for key, value in token_counts.items():
+        vec[key] = value / len(tokens)   # 출현 횟수 ÷ 문서 길이 → TF 값 저장
+    
+    doc_vectors.append(vec)   # 완성된 문서 벡터를 리스트에 추가
+
+
+# 이렇게 벡터화가 되어야 코사인을 이용해서 유사도를 구할 수 있음
+```
+
+<br/>
+
+### 코드 분석 
+
+- 위에서 벡터화를 한 정보를 바탕으로 **코사인**을 이용하여 유사도를 구해보자
+
+    - TF의 경우를 생각해보면 절대 빈도가 아니라 단어들 사이의 TF **비율**에 근거해서 유사도를 판단한다고 할 수 있음
+ 
+        - 쉽게 말해 문서 길이가 다르니까 단순히 "몇 번 나왔다"는 횟수로 비교하면 불공정하다는 의미
+     
+    - 자연어 문서의 벡터 공간에서 **차원 수**는 **어휘집의 토큰 개수**와 같음
+ 
+        - 이와 같은 차원 수를 K 또는 |V|로 표현함
+     
+            - 위 예시 코드인 경우 k = 18  
+     
+        -  
+
+    
 
 
 
