--- a/Natural Language Processing/Natural Language Processing study/03-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/03-1장.md
@@ -269,6 +269,78 @@ for doc in docs:
 
 ### 코드 분석 
 
+- 첫번째 문장 : "The faster Harry got to the store, the faster and faster Harry would get home."
+
+    - 토큰 개수: 17개
+   
+    - 출현 단어: faster(3), harry(2), got(1), get(1), to(1), the(2), store(1), ,(1), .(1), would(1), home(1)
+ 
+    - TF 값 = 횟수 ÷ 토큰 개수 = 횟수 ÷ 17
+ 
+    - 출력 예시 : OrderedDict([(',', 0.0588), ('.', 0.0588), ('and', 0.0), ('as', 0.0),
+             ('faster', 0.1765), ('get', 0.0588), ('got', 0.0588),
+             ('hairy', 0.0), ('harry', 0.1176), ('home', 0.0588),
+             ('is', 0.0), ('jill', 0.0), ('not', 0.0), ('store', 0.0588),
+             ('than', 0.0), ('the', 0.1176), ('to', 0.0588), ('would', 0.0588)])
+
+<br/>
+
+- 두번쨰 문장 : "Harry is hairy and faster than Jill."
+
+    - 토큰 개수: 8개
+    
+    - 출현 단어: harry(1), is(1), hairy(1), and(1), faster(1), than(1), jill(1), .(1)
+
+    - TF 값 = 횟수 ÷ 8 = 0.125
+ 
+    - 출력 예시 : OrderedDict([(',', 0.0), ('.', 0.125), ('and', 0.125), ('as', 0.0),
+             ('faster', 0.125), ('get', 0.0), ('got', 0.0),
+             ('hairy', 0.125), ('harry', 0.125), ('home', 0.0),
+             ('is', 0.125), ('jill', 0.125), ('not', 0.0), ('store', 0.0),
+             ('than', 0.125), ('the', 0.0), ('to', 0.0), ('would', 0.0)])
+
+<br/>
+
+- 세번째 문장 : "Jill is not as hairy as Harry."
+
+    - 토큰 개수: 8개
+
+    - 출현 단어: jill(1), is(1), not(1), as(2), hairy(1), harry(1), .(1)
+
+     - TF 값 = 횟수 ÷ 8
+ 
+     - 출력 예시 : OrderedDict([(',', 0.0), ('.', 0.125), ('and', 0.0), ('as', 0.25),
+             ('faster', 0.0), ('get', 0.0), ('got', 0.0),
+             ('hairy', 0.125), ('harry', 0.125), ('home', 0.0),
+             ('is', 0.125), ('jill', 0.125), ('not', 0.125), ('store', 0.0),
+             ('than', 0.0), ('the', 0.0), ('to', 0.0), ('would', 0.0)])
+       
+<br/>
+
+- 여기서 **코사인 θ 값 자체가 유사도 점수**이다 아래 예시를 보자
+
+- ex: lexicon = [‘harry’, ‘faster’, ‘jill’] 라고 가정
+
+    - 문서 A 벡터 = [0.2, 0.3, 0.0] 가정 
+
+    - 문서 B 벡터 = [0.1, 0.3, 0.1] 가정
+ 
+        - 구하고자 하는 코사인 값은은 아래 공식이다
+     
+            -  ![System Resources](../../images/Natural%20Language%20Processing%20images/03-1장코사인공식.png)
+ 
+        - 내적 공식은 아래와 같다 
+ 
+            -  ![System Resources](../../images/Natural%20Language%20Processing%20images/03-1장내적공식.png)
+         
+        -  크기 공식은 아래와 같다
+     
+            -  ![System Resources](../../images/Natural%20Language%20Processing%20images/03-1장크기공식.png)
+              
+<br/>
+
+### 코사인 유사도 추가 내용 
+
 - 위에서 벡터화를 한 정보를 바탕으로 **코사인**을 이용하여 유사도를 구해보자
 
     - TF의 경우를 생각해보면 절대 빈도가 아니라 단어들 사이의 TF **비율**에 근거해서 유사도를 판단한다고 할 수 있음
