--- a/Natural Language Processing/Natural Language Processing study/03-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/03-1장.md
@@ -336,6 +336,16 @@ for doc in docs:
         -  크기 공식은 아래와 같다
      
             -  ![System Resources](../../images/Natural%20Language%20Processing%20images/03-1장크기공식.png)
+ 
+        - 따라서 최종 계산은 아래와 같다
+           
+            - 내적 = (0.2×0.1) + (0.3×0.3) + (0.0×0.1) = 0.02 + 0.09 + 0 = 0.11
+
+            - A 크기 = √(0.2² + 0.3² + 0.0²) = √(0.04 + 0.09) = √0.13 ≈ 0.3606
+
+            - B 크기 = √(0.1² + 0.3² + 0.1²) = √(0.01 + 0.09 + 0.01) = √0.11 ≈ 0.3317
+
+            - 코사인 유사도 = 0.11 / (0.3606 × 0.3317) ≈ 0.92  
               
 <br/>
 
