--- a/Discrete Structures/Discrete Structures study/03-3장.md
+++ b/Discrete Structures/Discrete Structures study/03-3장.md
@@ -225,13 +225,32 @@
     
         - 이 구간 안에도 무한히 많은 실수가 있으므로 자연수로는 전부 나열 불가
 
+<br/>
+
+- **핵심은 무한집합이라고 해서 무조건 비가산 집합이 아니다**
+
+<br/>
 
 
+### 가산집합 예시 문제 
 
+- 문제 : 양의 짝수 집합 E가 가산집합임을 보여라
 
+    - 함수 f(x) = 2x라고 정의하자
+ 
+    - 자연수 1,2,3,… 하나하나가 정확히 짝수 2,4,6,…와 연결된다
+ 
+    - 그러면 f는 Z+(양의 정수)에서 E (양의 짝수)로 가는 **전단사(bijection)** 이다
+ 
+        - 일대일임을 보이기 위해, f(n) = f(m)이라고 가정하자. 그러면 2n = 2m이 되고, n = m 이므로 다른 자연수를 넣으면 절대 같은 짝수가 나오지 않는다
+     
+        - 전사를 증명하기 위해 t가 양의 짝수라고 하자. 그러면 t=2k인 양의 정수 k가 존재하고, f(k)=t이다
+     
+            - 즉, 임의의 짝수 t는 반드시 어떤 자연수 k를 2배를 했을 때 나온다  
 
+<br/>
 
-
+## p.19
 
 
 
