--- a/Probability Theory for AI/Probability Theory for AI study/03-1장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/03-1장.md
@@ -1,1 +1,106 @@
+### 임의 변수(Random Variables, RV)
+
+- **정의** : 무작위 실험의 결과를 숫자로 매핑(mapping)하는 규칙
+ 
+    - ex: 동전 던지기를 할 때 앞면은 1 뒷면을 0으로 지정해주는 것
+ 
+    - 이렇게 해야 확률연산이 가능
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
