--- a/Probability Theory for AI/Probability Theory for AI study/03-1장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/03-1장.md
@@ -1,28 +1,177 @@
+## 수식은 줄 것. 이해하는게 중요
+
 ### 임의 변수(Random Variables, RV)
 
 - **정의** : 무작위 실험의 결과를 숫자로 매핑(mapping)하는 규칙
+
+    - 임의변수 X는 확률공간 Ω(모든 가능한 사건의 집합)에서 실수 집합 ℝ로 가는 함수이다  
  
     - ex: 동전 던지기를 할 때 앞면은 1 뒷면을 0으로 지정해주는 것
  
     - 이렇게 해야 확률연산이 가능
 
+<br/>
 
+- 동전 던지기 예시
+  
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장임의변수그림.png)
+ 
+    - 확률공간(Ω): {HH, HT, TH, TT} (동전 2번 던졌을 때 가능한 모든 경우)
+ 
+    - X(앞면) = 1 이라고 정의도 가능
+ 
+        - 여기서 앞면은 **사건(Event)** 이고
+     
+        - 임의 변수는 **사건을 숫자로 바꿔주는 함수**이다
 
+<br/>
 
+- **Range(X)** : 임의 변수가 가질 수 있는 값들의 집합
 
+    - ex : 동전 2번 던지기 → Range(X)={0,1,2}
+    
+    - ex : 시험 합격 여부 → Range(X)={0,1}
 
+<br/>
 
+### 확률 공간 
 
+- **표본공간 (Sample space)**
 
+    - 무작위 실험의 **모든 가능한 결과 목록**
 
+    - **Ω** 로 표기
+ 
+        - ex: 실험의 모든 답안지 모음
+ 
+        - ex:  결과 집합: Ω = {HH, HT, TH, TT}
 
+        - ex:  HH: 두 번 다 앞면, HT: 첫 번째 앞면/두 번째 뒷면 …
+<br/>
 
+- **사건 공간 (Event space)**
 
+    - 우리가 확률을 매길 수 있게 합의한 사건들의 모음
+ 
+    - **𝓕** 로 표기
+ 
+    - ex: 합격한 답안지 모음, 점수 60점 이하 답안지 모음, 동전 2번 던져서 앞면이 1번 나온 경우 등 
+ 
+    - **표본공간의 부분집합들(멱집합)**
+ 
+    - ex: 동전 2번 던지기 (Ω = {HH, HT, TH, TT})
+    
+        -   {HH}, {HT, TH}, {HH, HT}, …
 
+<br/>
 
+- **확률 측도 P (Probability measure)**
 
+    - 사건에 **0~1 확률** 숫자를 붙이는 규칙 (공리 성립 필요)
+ 
+    - 동전 2번 던지기
+        
+        - 표본 공간 Ω = {HH, TT, HT, TH}
+       
+        - 임의 변수 X = 앞면의 개수
+       
+        - X(HH)=2
+       
+        - X(HT)=X(TH) =1
 
+        - X(TT) = 0
 
+        - 𝑋:	Ω → {0,1,2} ⊂ ℝ
+
+<br/>
+
+- **정리**
+
+    - 무작위 실험의 가능한 모든 결과 (Ω)
+
+        - 표본공간, 즉 모든 경우의 수
+
+    - 그 결과들로 정의된 사건들의 모음 (𝓕)
+
+         - 우리가 다루고 싶은 사건 집합들
+
+    - 각 사건에 확률을 배정하는 규칙 (P)
+
+        - 확률측도, 사건별 확률 값
+
+    - 임의변수 : 확률 공간 (Ω, 𝓕, P)에서 정의된 실수 값 함수
+ 
+        - **X : Ω → ℝ**
+
+<br/>
+
+### 이산 임의 변수(Discrete Random Variables)
+
+- **정의** :  임의변수 X가 취할 수 있는 값들의 집합(치역, Range(X))이 **셀 수 있는** 경우(countable set)
+
+    - ex: 동전 던져서 앞면 개수 (0,1,2,…,n)
+
+    - ex: 시험 합격/불합격 (0 또는 1)
+
+    - ex: 버스에 탄 사람 수 (자연수)
+ 
+    - 응용사례
+ 
+        -  객체 분류: 사전에 정의된 개수의 이산형 클래스 개수로 입력의 클래스를 분류
+    
+        -  언어 모델링: 어휘 집합은 유한한 이산 집합으로 정의됨
+      
+        -  강화 학습: 행동 공간이 유한하게 정의되는 경우
+
+<br/>
+
+### 확률 질량 함수 (Probability Mass Function, PMF)
+
+- 정의 : **이산** 임의변수 X가 특정 값 x를 가질 **확률**
+
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장PMF공식.png)
+ 
+        - 위 공식에서 시그마의 의미는
+     
+            - X(w) = k : 임의변수 값이 k가 되는 경우만 골라서 하겠다는 의미이다
+
+    - **p(x) = P(X = x)** 로 표기
+ 
+        - p(x): 특정 값에만 대응되는 확률을 주는 함수 (mass function)
+     
+        - P(·): 전체 사건에 확률을 매기는 큰 함수 (measure)
+     
+        - 모든 확률의 값은 1
+
+<br/>
+
+- **성질**
+
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장PMF성질.png)
+ 
+    - 마지막 공식의 의미는 사건 A가 여러 값으로 이루어져 있으면, 그 값들의 확률을 다 더하면 된다는 것이다
+ 
+        - 동전 2번 던지기 예시에서
+     
+            - PMF:
+
+                - P_X(0) = 1/4 (앞면 0개, TT)
+
+                - P_X(1) = 1/2 (앞면 1개, HT·TH)
+
+                - P_X(2) = 1/4 (앞면 2개, HH)
+             
+                - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장동전던지기그래프.png) 
+             
+            - Range(X) = {0,1,2}
+
+            - 앞면이 1개 이상 나오는 사건 : A = {1,2}
+         
+            - P(X ∈ A) = P(X=1) + P(X=2)
+
+            - = 1/2 + 1/4
+
+            - = 3/4
 
 
 
