--- a/Probability Theory for AI/Probability Theory for AI study/03-1장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/03-1장.md
@@ -173,13 +173,43 @@
 
             - = 3/4
 
+<br/>
 
+- 주사위 예시
 
+![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장PMF주사위예시.png)
 
+<br/>
 
+### 확률 분포의 기댓값과 분산
 
+- **기대값 (Expectation, Mean, Average)**
 
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장기대값공식.png)
+ 
+    - 분포의 **중심**을 표현
+ 
+    - 동일한 확률 실험을 **무한히 반복했을 때 평균적으로** 관찰되는 값
 
+<br/>
+ 
+- **분산 (Variance)**
+
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장분산공식.png)
+ 
+    - 분포의 **흩어짐** 정도
+ 
+    - 임의 변수가 기댓값 근처에 **얼마나 밀집** 또는 퍼져 있는지를 측정
+
+<br/>
+
+- 예시
+
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장기대값분산예시.png) 
+
+<br/>
+
+### 기대값의 선형성 
 
 
 
