--- a/Discrete Structures/Discrete Structures study/03-3장.md
+++ b/Discrete Structures/Discrete Structures study/03-3장.md
@@ -212,6 +212,12 @@
         - 유리수 집합 : Q = {p/q | p, q ∈ Z, q ≠ 0}
           
             - 표처럼 배열해 “대각선 방법”으로 하나씩 세면 셀 수 있음
+         
+    - 가산 집합을 **증명**하기 위해선 **일대일대응**을 보이면 된다
+ 
+        - 일대일 대응이라는 것은 매칭이 되어 순서를 매길 수 있다는 의미
+     
+        - 만약 [0,1]과 같은 비가산 집합에서는 아무리 나열하려 해도 빠뜨리는 원소가 존재함 
 
 <br/>
 
@@ -232,7 +238,7 @@
 <br/>
 
 
-### 가산집합 예시 문제 
+### 가산집합 예시 문제 1
 
 - 문제 : 양의 짝수 집합 E가 가산집합임을 보여라
 
@@ -250,7 +256,11 @@
 
 <br/>
 
-## p.19
+### 가산집합 예시 문제 2 
+
+- 문제 : 정수 집합 Z가 셀 수 있음 (countable)을 보여라
+
+- 
 
 
 
