--- a/Discrete Structures/Discrete Structures study/03-3장.md
+++ b/Discrete Structures/Discrete Structures study/03-3장.md
@@ -1,4 +1,4 @@
-### T/F 퀴즈
+<img width="32" height="43" alt="image" src="https://github.com/user-attachments/assets/aaf813a2-dc16-4fd0-8713-270d0e79e981" />### T/F 퀴즈
 
 - A,B,C는 집합이다
 
@@ -213,7 +213,7 @@
           
             - 표처럼 배열해 “대각선 방법”으로 하나씩 세면 셀 수 있음
          
-    - 가산 집합을 **증명**하기 위해선 **일대일대응**을 보이면 된다
+    - 가산 집합을 **증명**하기 위해선 **일대일대응**을 보이거나, 나름의 논리적 방법을 이용해야한다
  
         - 일대일 대응이라는 것은 매칭이 되어 순서를 매길 수 있다는 의미
      
@@ -258,32 +258,146 @@
 
 ### 가산집합 예시 문제 2 
 
-- 문제 : 정수 집합 Z가 셀 수 있음 (countable)을 보여라
+- 문제 1 : 정수 집합 Z가 셀 수 있음 (countable)을 보여라
 
-- 
+    - 증명 방법 : **일대일 대응**
+ 
+    - 양의 정수 집합(Z⁺)에서 정수 집합(Z)로의 일대일 대응으로 증명할 수 있다
+ 
+        - n이 짝수일 때는 f(n) = n/2 로 하고
+ 
+        - n이 홀수일 때는 f(n) = −(n−1)/2 라고 하면
+ 
+        - n이 짝수일 때는 양의 정수, n이 홀수일 때는 음의 정수와 0이 나옴 
 
+<br/>
 
+- 문제 2 : 양의 유리수들이 셀 수 있음을 보여라
 
+    - 유리수 정의 : 두 정수 p, q (단 q ≠ 0)의 비율로 표현될 수 있다
+ 
+    - 증명 방법: 표로 나열
+ 
+        - p + q = 2 인 분수 나열
+     
+            - 1 / 1
+ 
+        - 그다음 p + q =3 인 분수 나열
+     
+            - 1 / 2 ,  2 / 1
+       
+        - 이런 식으로 계속하면
+     
+            - 1, ½, 2, 3, 1/3, 1/4, 2/3,… 증명 가능
+         
+            - 이걸 표로 표현하면 아래와 같다
+         
+            - ![System Resources](../../images/Discrete%20Structures%20images/03-1장가산집합문제표.png)
+         
+            - 화살표를 따라가며 새로운 항만 고르면, 모든 유리수를 중복 없이 하나의 순서로 나열할 수 있음
 
+<br/>
 
+### 행렬(matrix)
 
+- **행렬(matrix)** : 숫자들을 직사각형 모양으로 배열한 것
 
+    - m개의 행(row), n개의 열(column)을 가진 행렬을 m × n 행렬이라 한다
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/03-1장행렬구조.png)
 
+<br/>
 
+- **정방행렬(square matrix)**
 
+    - 행과 열의 개수가 **같은** 행렬 
 
+<br/>
 
+### 행렬의 합 
 
+- 행렬 A와 B의 합은 A + B로 표시하고, 각 원소를 더해주면 된다
 
+    - 예시
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/03-1장행렬의합예시.png)
 
+<br/>
 
+### 행렬의 곱 
 
+- 행렬 A가 m × k, 행렬 B가 k × n 행렬이라고 하자
 
+    - 행렬의 곱을 하면 AB (A와 B의 곱)은 m × n 행렬이 된다
+ 
+    - 곱셈 방법 : 각 행과 열의 원소를 순서대로 짝 지어서 곱한 값을 더해서 표시
+ 
+    - 아래는 예시이다
+ 
+        - ![System Resources](../../images/Discrete%20Structures%20images/03-1장행렬의곱예시.png)
+     
+        - 최종 결과 행렬의 1행 1열의 값 14는 다음 과정을 거친 결과이다
+     
+            - A 행렬의 1행과 B 행렬의 1열 곱의 합
+         
+            -  (1 x 2) + (0 x 1) x (4 x 3) = 14
+         
+            -  이렇게 행과 열의 개수가 동일해야 곱셉이 가능함 
 
+<br/>
 
+### 단위행렬(identity matrix)
 
+- **단위행렬(identity matrix)**
 
+    - 원소 δij​는 i = j일 때 1, 그렇지 않을 때는 0인 행렬
+ 
+    - 즉, 대각선만 모두 1인 행렬
+ 
+    - 단위행렬은 항상 n x n 형태이고 이렇게 행과 열의 개수가 동일한 행렬을 **정방행렬(square matrix)** 이라고 함
 
+<br/>
+
+- **단위행렬 성질**
+  
+    - 단위행렬은 행렬의 곱에서 일반 곱셉식의 **1과 같은 역할***을 한다
+ 
+        - ![System Resources](../../images/Discrete%20Structures%20images/03-1장단위행렬곱성질.png)
+     
+    - A의 **0제곱**은 **단위행렬 In**으로 정의한다
+ 
+        - ![System Resources](../../images/Discrete%20Structures%20images/03-1장단위행렬곱성질2.png)
+
+<br/>
+
+### 전치행렬(Transpose of a Matrix)
+
+- A = [a_ij] 가 m × n 행렬이라고 하자
+
+    - A의 전치(transpose)는 A의 **행과 열을 서로 바꿔 얻은** n×m 행렬이다
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/03-1장전치행렬표기.png)
+
+ 
+    - 아래는 예시이다
+ 
+        - ![System Resources](../../images/Discrete%20Structures%20images/03-1장전치행렬구조예시.png)
+     
+        - 쉬운 변환 법은 2행 1열의 원소이면, 1행 2열에 배치만 해주면 된다 
+
+<br/>
+
+### 대칭행렬(Symmetric Matrix)
+
+- **정방행렬** A가 자신의 **전치행렬**과 **같다면** 대칭행렬이라고 한다 
+
+    - 쉽게 말해, 전치(transpose)했을 때 모양이 바뀌지 않으면 대칭행렬이다
+ 
+    - 특징 : 행렬의 **대각선을 기준**으로 왼쪽/오른쪽이 **대칭**이어야 한다
+
+    - 예시
+ 
+        - ![System Resources](../../images/Discrete%20Structures%20images/03-1장대칭행렬예시.png)
 
 
 
