--- a/Discrete Structures/Discrete Structures study/03-3장.md
+++ b/Discrete Structures/Discrete Structures study/03-3장.md
@@ -399,7 +399,15 @@
  
         - ![System Resources](../../images/Discrete%20Structures%20images/03-1장대칭행렬예시.png)
 
+<br/>
 
+### 0-1 행렬(zero-one matrix) 
+
+- 행렬의 값이 오직 **0과 1만** 가지는 행렬
+
+    - 이산 구조(discrete structure)에서 동작하는 알고리즘은, 아래와 같은 불(Boolean) 연산을 기반으로 한다
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/03-1장01행렬예시.png)
 
 
 
