--- a/Natural Language Processing/Natural Language Processing study/03-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/03-1장.md
@@ -362,19 +362,182 @@ for doc in docs:
         - 이와 같은 차원 수를 K 또는 |V|로 표현함
      
             - 위 예시 코드인 경우 k = 18  
-     
-        -  
 
+<br/>
+
+### 벡터 유사도 계산 코드 
+
+```ruby
+import math
+
+# 유사도를 계산하기 위한 코사인 함수
+def cosine_sim(vec1, vec2):
+    # vec1과 vec2의 값(value)들만 추출해서 리스트로 만듦
+    # 위에서 구한 OrderedDict([(',', 0.0), ('.', 0.125), ('and', 0.125), ...]) 값에서 .values() 를 해주면  [0.0, 0.125, 0.125, ... ] 로 나옴 
+    vec1 = [val for val in vec1.values()]
+    vec2 = [val for val in vec2.values()]
+
+    # 내적(dot product) 값을 저장할 변수를 0으로 초기화
+    dot_prod = 0
+    # vec1의 각 요소(v)와 인덱스(i)를 순회
+    for i, v in enumerate(vec1):
+        # vec1의 값과 vec2의 같은 위치에 있는 값을 곱해 내적 값에 더함
+        dot_prod += v * vec2[i]
+
+    # vec1의 크기(magnitude)를 계산. 각 요소를 제곱하여 모두 더한 뒤 제곱근을 구한다 
+    mag_1 = math.sqrt(sum([x**2 for x in vec1]))
+    # vec2의 크기(magnitude)를 계산합니다.
+    mag_2 = math.sqrt(sum([x**2 for x in vec2]))
+
+    # 최종적으로 코사인 유사도 공식을 적용하여 내적을 두 벡터의 크기의 곱으로 나눈 값을 반환합니다.
+    return dot_prod / (mag_1 * mag_2)
+```
     
+- 코사인 유사도는 -1에서 +1 사이의 값을 가지며, **값이 높을수록 유사도**가 높다
+
+    - 두 벡터가 얼마나 비슷한지 숫자로 나타낸 것이다
+ 
+    - **음수**의 경우 **반대 방향**을 의미하며, -1이면 정반대의 방향이다
+ 
+        - ex: "그 영화는 정말 재미있고 훌륭해" 와 "그 영화는 정말 지루하고 형편없어"는 상반되는 문
+ 
+    - **0**이면 **공통점이 전혀 없다**는 것을 의미
+ 
+        - ex: "나는 사과를 좋아해." 와 "코끼리는 아프리카에 산다." 는 아무 관련이 없음
+
+<br/>
+
+### 역문서 빈도 (IDF, Inverse Document Frequency)
+
+- **역문서 빈도 (IDF, Inverse Document Frequency)**
+
+    - 각 단어에 대해 해당 단어가 출현한 문서 수를 전체 문서 수에 대해 나눈 것
+
+    - 전체 문서 수 / 해당 단어 출현 문서 수
+ 
+    - IDF 값이 높을수록 특정 문서에서만 등장하는 단어가 되며 이는 각 문서의 **주제를 대표하는 단어**일 확률이 높아짐
+ 
+        - '그리고', '나는', '매우' 같은 단어는 IDF 값이 낮게 나옴
+     
+        - '인공지능', '양자역학' 같은 단어는 특정 주제를 다루는 몇 개의 문서에만 등장할 것임 -> 희귀함 
+
+<br/>
+
+- 추가적으로 '역'문서 빈도인 이유는
+
+    - DF를 보면, 흔한 단어일수록 값이 높고(↑), 중요한(희귀한) 단어일수록 값이 낮은(↓) 것과 반대되기 때문이다
+      
+<br/>
+
+### 역문서 빈도 (IDF, Inverse Document Frequency) 코드  
+
+- 위에서 사용한 kite 위키피디아 문서 중 history 영역의 예시 문서를 사용함 
+
+```ruby
+# Counter는 단어의 개수를 쉽게 세기 위해 사용하는 도구
+from collections import Counter
+
+
+# word_tokenize는 문장을 단어 단위로 쪼개주는 함수(토크나이저)
+from nltk.tokenize import word_tokenize import nltk
+
+
+# intro_text 변수에 소문자로 변환된 텍스트를 할당
+intro_text = kite_text.lower()
+# intro_text를 단어 단위(토큰)로 쪼갬
+intro_tokens = tokenizer.tokenize(intro_text)
+
+
+# history_text를 소문자로 변환
+history_text = history_text.lower()
+# history_text를 단어 단위(토큰)로 쪼갬
+history_tokens = tokenizer.tokenize(history_text)
+
+
+# intro 문서의 전체 단어(토큰) 수를 계산
+intro_total = len(intro_tokens)
+# history 문서의 전체 단어(토큰) 수를 계산
+history_total = len(history_tokens)
+
+
+# TF(단어 빈도) 값을 저장할 공간(딕셔너리)을 만듦
+intro_tf = {}
+history_tf = {}
+
+# intro 문서에 있는 각 단어의 개수를 셈
+intro_counts = Counter(intro_tokens)
+# intro 문서에서 'kite'의 TF를 계산함 (kite 등장 횟수 / 전체 단어 수)
+intro_tf['kite'] = intro_counts['kite'] / intro_total
+
+# history 문서에 있는 각 단어의 개수를 셉니다.
+history_counts = Counter(history_tokens)
+# history 문서에서 'kite'의 TF를 계산합니다.
+history_tf['kite'] = history_counts['kite'] / history_total
+
+# 'kite'의 TF 계산 결과를 출력합니다.
+print('Term Frequency of "kite" in intro is: {}'.format(intro_tf['kite']))
+print('Term Frequency of "kite" in history is: {}'.format(history_tf['kite']))
+
+# 출력값은 아래와 같음
+# Term Frequency of "kite" in intro is: 0.0440771349862259
+# Term Frequency of "kite" in history is: 0.0202020202020204
+# 약간의 차이는 존재하지만, 이 수치만으로 두 문서에서 kite의 중요도가 다르다고 단정짓기는 어려
+
+
+# intro 문서에서 'and'의 TF를 계산
+intro_tf['and'] = intro_counts['and'] / intro_total
+# history 문서에서 'and'의 TF를 계산
+history_tf['and'] = history_counts['and'] / history_total
+
+
+# 'and'의 TF 계산 결과를 출력
+print('Term Frequency of "and" in intro is: {}'.format(intro_tf['and']))
+print('Term Frequency of "and" in history is: {}'.format(history_tf['and']))
+
+
+# 출력값은 아래와 같음 
+# 결과: Term Frequency of "and" in intro is: 0.027548209366391185
+# 결과: Term Frequency of "and" in history is: 0.0303030303030304
 
 
 
+# 아래 코드부터는  kite, and, china에 대한 IDF 비교하는 코드이다
 
 
 
+# 'kite'가 포함된 문서 수를 세기 위한 변수를 0으로 설정
+num_docs_containing_kite = 0
+# 'and'가 포함된 문서 수를 세기 위한 변수를 0으로 설정
+num_docs_containing_and = 0
+# 'china'가 포함된 문서 수를 세기 위한 변수를 0으로 설정
+num_docs_containing_china = 0
+
+# 두 문서를 차례대로 확인하는 반복문
+for doc in [intro_tokens, history_tokens]:
+    # 현재 문서에 'kite'가 있으면, 해당 변수에 1을 더함
+    if 'kite' in doc:
+        num_docs_containing_kite += 1
+    # 현재 문서에 'and'가 있으면, 해당 변수에 1을 더함
+    if 'and' in doc:
+        num_docs_containing_and += 1
+    # 현재 문서에 'china'가 있으면, 해당 변수에 1을 더함
+    if 'china' in doc:
+        num_docs_containing_china += 1
+
+# 'kite'의 IDF를 계산하여 출력 (전체 문서 수: 2)
+print('kite IDF: ', 2 / num_docs_containing_kite)
+# 'and'의 IDF를 계산하여 출력
+print('and IDF: ', 2 / num_docs_containing_and)
+# 'china'의 IDF를 계산하여 출력
+print('china IDF: ', 2 / num_docs_containing_china)
 
 
-
+# 출력값은 아래와 같다
+# kite IDF: 1.0
+# and IDF: 1.0
+# china IDF: 2.0
+# 즉, china 한 문서(history)에만 등장했으므로 희귀성이 높음 -> 특정 문서를 더 잘 설명해주는 키워드임
+```
 
 
 
